--- a/package.json
+++ b/package.json
@@ -23,10 +23,15 @@
     "2d"
   ],
   "dependencies": {
-    "planck-js": "^1.3.0"
+    "planck-js": "^1.3.0",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0"
   },
   "devDependencies": {
+    "@babel/preset-react": "^7.28.5",
     "@types/node": "^24.10.1",
+    "@types/react": "^19.2.7",
+    "@types/react-dom": "^19.2.3",
     "typescript": "^5.9.3",
     "vite": "^7.2.6",
     "vite-plugin-checker": "^0.11.0"
